@@ -152,18 +152,18 @@ FF ******************* NEW SAMPLER NEEDS TO BE CODED ***********************
 
 * GUI (machines):
 -----------------
-**	preview check box in preset dialog stopped working? 
-	[ it works, but you can't test notes realtime because the dialog is modal ]
 **	alk:  note gets stuck bug, open a machine dialog, play a note, move the machine window,
 		before releasing mouse button release note, then release mouse.
 		[Could it be InputHandler::KeyToCmd() not understanding the key because of the mouse button?]
+*	preview check box in preset dialog stopped working? envelope dialog for sampler?
+	[ it works, but you can't test notes realtime because the dialog is modal unless you use midi ]
 *	moving machines makes playback pop - machine interface takes too long to redraw, and moving causes redraw
 	on every frame - 
 	[ make bigger buffers and more of them to prevent this from happening ]
 *	<bdzld> when you put a machine on top of each other, the vus always pop to the top?
 	[ could try to set up some sort of clipping rect stack, at the cost of cpu... ]
 *	<alk> move mouse over vu, black flickering (more noticable on the big vus)* transparent only i think
-	[ this is perhaps a flaw in the transparency blit algo ]
+	[ this is perhaps a flaw in the transparency blit algo? ]
 !!	machine param enter dialog should be modeless.
 		[[JAZ] Why? What do you want to do meanwhile?]
 		[<pooplog> play notes to test parameter]
@@ -187,7 +187,6 @@ FF ******************* NEW SAMPLER NEEDS TO BE CODED ***********************
 
 * Player Engine:
 ----------------
-** The play block feature doesn't work.
 **	<sue> playbar should take latency into account - same as ^
 **	<_sue_> (autostop) now it also behaves weird with internal delays even if not in record mode....just 
 		playng
@@ -229,6 +228,7 @@ FF ******************* NEW SAMPLER NEEDS TO BE CODED ***********************
 	minimize/refocus psycle or change the current view
 	this only seems to happen on the rgc audio z3ta+ and on nothing else
 ** vst fm7 locks up psycle on parameter change midi command with gui open
+** phatmatic crashes with an assertion error when you reopen the gui after loading a sample.
 ** <photonamp> i dont understand why sampletank notes are getting stuck in v1.7rc5 and while in 1.66 
 	it works fine?
 * drumatic 2 vst: http://psycle.pastnotecut.org/thread.php?threadid=871&boardid=2&styleid=1
@@ -278,6 +278,7 @@ FF ******************* NEW SAMPLER NEEDS TO BE CODED ***********************
 * Interface (contains pattern stuff too):
 ------------
 ** When 'cursor always down' is enabled u can't insert values on the last row
+	[ not recreated ]
 **	<Erodix> theres one little thing.. when psycle is playing and i double-click an song, a new 
 	psycle opens..
 	[ DDE ? mmmm... ]
@@ -290,6 +291,7 @@ FF ******************* NEW SAMPLER NEEDS TO BE CODED ***********************
 	<bdzld> yep, or if the sample rate is invalid
 * <alk> the bug where the pattern ed loses focus * what got the focus was the sequencer button (clone I think)
 * sometimes even tho edit is on I cant enter notes, fixed by changing to machine screen and back, alt tabbing to another app and back
+	[ same thing, pattern ed looses focus ]
 *	Numeric 0 to stop song could be used in 1.66, but in 1.7, it puts the value if its not in
 	in the "note" column.
 	[Is it useful to enter numbers while playing and follow song? what about just adding notes
@@ -300,9 +302,6 @@ FF ******************* NEW SAMPLER NEEDS TO BE CODED ***********************
 	 range bigger]
 *	<alk> there's a bug where when u alt-tab the icon is not correct 
 		[ cannot find the reason, older version had this too ]
-*	<alk> 'play current block' loops current pattern -should it just play the selected block?
-*	<alk> 'play current pattern' plays song from current order (which is the same function as 'play song (normal)' 
-	-should it just play the current pattern?
 *	<alk> in keyboard settings, try setting transpose channel +1 to 'alt f12', display Alt f12, but then if you move to another function and back it displays f12
 !!!	Psycle default colours should be improved (cursor, selection, etc.)
 !!	Should make it so clicking on colour boxes pops up menu
