@@ -6,13 +6,14 @@ V1.7.3
 ------
 + double clicking on pattern highlights that track (pooplog)
 + 64 tracks available! (might break some machines?) (pooplog)
++ play from start button (pooplog)
 * new file format fixing a lot of problems, and incorporating FAST lossless data compression (pooplog)
 * better memory management of pattern data (up to 10mb savings) (pooplog)
 * optimized machine indexing and also machine view rendering (pooplog)
 ! sampler doesn't crash when no instrument is specified any more (pooplog)
 ! save as - pick an existing song, and it now asks if it is ok to overwrite (pooplog)
 ! error messages on file read/write problems (pooplog)
-! vsts don't immediately crash psycle when they give an exception on save/load any more (pooplog)
+! vsts don't immediately crash psycle when they give an exception on save/load/instance any more (pooplog)
 ! master machine does not let clipping samples through when decrease on clip is set (pooplog)
 
 
